--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     />
 
     <title>Chat application</title>
-    <script src="https://chatapplication0123.herokuapp.com/socket.io/socket.io.js"></script>
+    <script src="https://chat0321.herokuapp.com/socket.io/socket.io.js"></script>
     <script defer src="client.js"></script>
   </head>
 
